# super_hydro

./: .coveragerc  .flake8  .hgignore  .init-file.bash  .readthedocs.yaml  Demo Functions.ipynb  DeveloperLog.md  DeveloperNotes.md  GPE Solver.ipynb  Getting Started.ipynb  Getting Started.md  Installation.ipynb  Kivy Summary.ipynb  LICENSE  Main.py  Main2.py  Makefile  Notes.md  README.md  SuperHydro.kv  SuperHydro.py  Tasks.tasks  anaconda-project.yaml  app.py  buildozer.spec  config.ini  environment._super_hydro.yml  environment._super_hydro_client.yml  environment._super_hydro_server.yml  environment._super_hydro_server_gpu.yml  environment._super_hydro_test.yml  environment._superhydro.yml  environment._superhydroclient.yml  environment._superhydroserver.yml  environment.client.yml  environment.cpu.yml  environment.dev.devenv.yml  environment.devenv.test.yml  environment.devenv.yml  environment.gpu.yml  (+17 more)
.github/workflows/: codeql.yml
Docs/: Architecture.ipynb  Architecture.ipynb.orig  Architecture.md  Communication.ipynb  GPE Solver.ipynb  GPE Solver.md  GPU Demo.ipynb  GPU_demo.ipynb  HTML5 Canvas.ipynb  Installation.ipynb  Installation.md  Kivy Summary.ipynb  Kivy Summary.md  Makefile  Network Schema.ipynb  NotebookClient.ipynb  NotebookClient.md  Performance.ipynb  Testing.ipynb  Testing.md  ToDo-Ideas.ipynb  ToDo-Ideas.md  TracerParticles.md  Untitled.ipynb  make.bat
Docs/.ipynb_checkpoints/: Architecture-checkpoint.ipynb  GPE Solver-checkpoint.ipynb  GPU_demo-checkpoint.ipynb  HTML5 Canvas-checkpoint.ipynb  Installation-checkpoint.ipynb  Kivy Summary-checkpoint.ipynb  NotebookClient-checkpoint.ipynb  Performance-checkpoint.ipynb  Testing-checkpoint.ipynb  ToDo-Ideas-checkpoint.ipynb  Untitled-checkpoint.ipynb
Docs/Demonstrations/: Breathers.ipynb  Breathers.ipynb.orig  Breathers.md  Contents (Start Here).ipynb  Contents (Start Here).md  Local Quantum Friction.ipynb  Local Quantum Friction.md  Local Quantum Friction.py  PeristentCurrents.md  Presentation.ipynb  Presentation.md  Solitons.ipynb  Solitons.md  Spin-Orbit Coupling.ipynb  Spin-Orbit Coupling.md  Vortex Forming.ipynb  Vortex Forming.md  VortexRing.ipynb  VortexRing.md  fl_socket_simple.py  quantum_friction.py  test_quantum_friction.py
Docs/Demonstrations/.ipynb_checkpoints/: Contents (Start Here)-checkpoint.ipynb  Presentation-checkpoint.ipynb  Vortex Forming-checkpoint.ipynb  VortexRing-checkpoint.ipynb
Docs/Demonstrations/templates/: index.html
Docs/Website/: super_hydro.ipynb  super_hydro.md
Docs/source/: conf.py  index.rst
Docs/sphinx-source/: Clients.md  DeveloperNotes.md  GPE.md  Installation.md  Models.md  Old.md  Overview.md  conf.py  flask.md  index.md  index.rst  install.md  local.bib  macros.bib  usermodel.md
Docs/sphinx-source/Dev/: Architecture.md  Flask.md  HTML5 Canvas.md  JavaScript Client.md  Kivy Summary.md  Network Schema.md  NotebookClient.md  Performance.md  Testing.md
Docs/sphinx-source/_static/: math_defs.tex
Docs/sphinx-source/_templates/: class.rst  layout.html  module.rst
Docs/sphinx-source/_templates/apidoc/: module.rst_t
Docs/sphinx-source/_templates/autosummary/: base.rst  module.rst
Docs/sphinx-source/api/: index.rst
JupyterNotebooks/: Network Schema.ipynb
src/super_hydro/: cli.py  communication.py  config.py  contexts.py  interfaces.py  synth.py  utils.py  widgets.py
src/super_hydro/client/: dumb.py  flask_client.py  notebook.py
src/super_hydro/client/static/css/: style.css
src/super_hydro/client/templates/: gpeBEC.html  gpeBECQuantumFriction.html
src/super_hydro/clients/: SuperHydro.kv  canvas_widget.py  flask.py  kivy.py  minimal.py  mixins.py  notebook.py
src/super_hydro/clients/templates/: base.html  gpeBECFlow.html
src/super_hydro/physics/: cell.py  gpe.py  helpers.py  soc.py  testing.py  tracer_particles.py
src/super_hydro/physics/tests/: test_gpe.py
src/super_hydro/server/: server.py
static/js/: app.js  app_func.js  flask_client.js
static/python/: add.py  genarray.py
super_hydro/: communication.py  config.py  contexts.py  interfaces.py  utils.py  widgets.py
super_hydro/client/: Main.py  SuperHydro.kv  __init__.py  canvas_widget.js  canvas_widget.py  dumb.py  flask_client.py  kivy.py  notebook.py
super_hydro/client/static/css/: style.css
super_hydro/client/static/js/: app_func.js
super_hydro/client/templates/: base.html  base_demo.html  cell.html  gpeBECSoliton.html  gpeBECVortices.html  index.html  model.html
super_hydro/physics/: cell.py  gpe.py  gpe2.py  helpers.py  modeltest.py  soc.py  tracer_particles.py
super_hydro/server/: Main.py  __init__.py  gpe.py  gpe2.py  gpe_gpu.py  server.py
super_hydro_client/: Main.py  SuperHydro.kv  communication.py  config.ini
super_hydro_server/: Main.py  communication.py  config.ini  gpe.py  gpe2.py
templates/: base.html  d3test.html  goodbye.html  heat.html  heatv1.html  index.html  model.html
tests/: test_cli.py  test_communications.py  test_gpe.py  test_physics.py  test_server.py
