[tool.poetry]
name = "super_hydro"
version = "0.1.2"
description = "Super_Hydro: Superfluid hydrodynamics explorer."
authors = ["Michael McNeil Forbes <m.forbes@wsu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
# Server dependencies
python = "^3.8"
attrs = "^20.3.0"
ConfigArgParse = "^1.3"
scipy = "^1.6.1"
# numpy = "^1.20.1"   # Brought in by scipy.

# Performance
numexpr = "^2.7.3"
Cython = "^0.29.22"

# Optional performance dependences: these need underlying libraries
cupy = {version = "^9.0.0", optional = true}
pyFFTW = {version = "^0.12.0", optional = true}

# Communication
pyzmq = "^22.0.3"
eventlet = "^0.30.2"

# Models
"zope.interface" = "^5.2.0"

# Client dependencies
matplotlib = "^3.3.4"
ipykernel = "^5.5.0"
ipywidgets = "^7.6.3"
mmf-setup = "^0.4.2"
ipycanvas = "^0.8.2"
#mmfutils = "^0.5.3"

# Web clients
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"



[tool.poetry.extras]
gpu = [
    "cupy"
]
fftw = [
    "pyfftw"
]

[tool.poetry.dev-dependencies]
memory-profiler = "^0.58.0"
line-profiler = "^3.2.6"
poetry2conda = "^0.3.0"

# myst-nb needs Sphinx < 4 for now...
Sphinx = "^3.5.4|^4.0.2"
myst-nb = "^0.12.3"
sphinx-book-theme = "^0.1.0"
sphinxcontrib-zopeext = "^0.2.4"
sphinx-autobuild = "^2021.3.14"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-xdist = "^2.2.1"
black = "^21.6b0"
sphinxcontrib-bibtex = "^2.3.0"
sphinx-panels = "^0.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

######################################################################
# poetry2conda: https://github.com/dojeda/poetry2conda
# Use this to generate environment.yml files.
[tool.poetry2conda]
name = "super_hydro"

[tool.poetry2conda.dependencies]
mmf-setup = { channel = "pip" }
mmfutils = { channel = "pip" }
ipycanvas = { channel = "conda-forge" }

#[tool.poetry.data_files]

######################################################################
# PyTest
[tool.pytest.ini_options]
testpaths = [ "src/super-hydro" ]
markers = [
    # mark test as a benchmark.  (Might be slow, or platform dependent)
    "bench",
    # mark test as slow.
    "slow",
]
addopts = [
    "-m not bench",
    "--doctest-modules",
    "--cov",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--no-cov-on-fail",
    #"-x",
    #"--pdb",
    #"--flake8",  # Disable until https://github.com/tholo/pytest-flake8/issues/8
]

doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE"
    ]

######################################################################
# Black
[tool.black]
exclude = '''
    /(
        \.git
      | \.hg
      | \.nox
      | \.venv
      | _build
      | build
      | dist
    )/
'''
