[tool.poetry]
name = "super_hydro"
version = "0.1.2"
description = "Super_Hydro: Superfluid hydrodynamics explorer."
authors = ["Michael McNeil Forbes <m.forbes@wsu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
# Server dependencies
python = ">=3.10,<3.12"
attrs = "~=20.3.0"
ConfigArgParse = "~=1.3"
click = "~=8.0.3"
scipy = "~=1.9.3"
# numpy = "~=1.20.1"   # Brought in by scipy.

# Performance
numexpr = ">=2.8.3"
Cython = ">=0.29.23"

# Optional performance dependences: these need underlying libraries
cupy = {version = ">=9.0.0", optional = true}
#pyFFTW = {version = ">=0.13.0", optional = true}  # Leave fftw for conda.

# Communication
pyzmq = ">=22.0.3"
eventlet = ">=0.31.0"

# Models
"zope.interface" = ">=5.4.0"

# Client dependencies
matplotlib = ">=3.5.2"
ipykernel = ">=5.5.0"
ipywidgets = ">=7.6.3"
mmf-setup = ">=0.4.6"
ipycanvas = ">=0.12.0"
# Leave fftw for conda.
#mmfutils = {version = ">=0.6.3", extras = ["fftw"], optional = true}
mmfutils = {version = ">=0.6.3", optional = true}
jupyter-contrib-nbextensions = ">=0.5.1"
notebook = ">=6.4.12"
jupyter-console = ">=6.4.4"
jupyter_nbextensions_configurator = ">=0.4.1"
tqdm = ">=4.64.1"
fastapi = {version = ">=0.95.1", extras = ["all"]}

# Security
# These dependencies are brought in by other packages, but the github dependabot flagged
# potential security risks, so we constrain these with secure versions:
ipython = ">=7.31.1"  # https://ipython.readthedocs.io/en/stable/whatsnew/version8.html#ipython-8-0-1-cve-2022-21699
pillow = ">=9.0.0"  # https://github.com/advisories/GHSA-8vj2-vxx3-667w

# Web clients
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.2"
pytz = "^2023.3"

#pytest-cov = {version = ">=2.11.1", extras = ["tests"]}
#pytest-flake8 = {version = ">=1.0.7", extras = ["tests"]}
#pytest-xdist = {version = ">=2.2.1", extras = ["tests"]}
#pytest-html = {version = ">=3.1.1", extras = ["tests"]}

# Documentation
Sphinx = {version = ">=4.2.0", optional = true}
myst-nb = {version = ">=0.13.1", optional = true}
sphinx-panels = {version = ">=0.6.0", optional = true}
sphinx-autobuild = {version = ">=2021.3.14", optional = true}
sphinx-book-theme = {version = ">=0.1.5", optional = true}
sphinx-click = {version = ">=3.1.0", optional=true}
sphinxcontrib-zopeext = {version = ">=0.3.0", optional = true}
sphinxcontrib-bibtex = {version = ">=2.4.1", optional = true}
sphobjinv = {version = ">=2.1", optional = true}
autodocsumm = {version = ">=0.2.7", optional = true}
jupytext = {version = ">=1.13.0", optional = true}

# Tests
pytest-cov = {version = ">=3.0.0", optional = true}
flake8 = {version = "<3.8.0", optional = true}   # https://github.com/tholo/pytest-flake8/issues/69
pytest-flake8 = {version = "~=1.0.7", optional = true}
pytest-xdist = {version = "~=2.4.0", optional = true}
pytest-html = {version = "~=3.1.1", optional = true}
pyaudio = "^0.2.13"

[tool.poetry.extras]
gpu = [
    "cupy",
]
fftw = [
    "pyfftw",
    "mmfutils",
]
docs = [
     "Sphinx",
     "myst-nb",
     "sphinx-panels",
     "sphinx-autobuild",
     "sphinx-book-theme",
     "sphinx-click",
     "sphinxcontrib-zopeext",
     "sphinxcontrib-bibtex",
     "sphobjinv",
     "autodocsumm",
     "pandoc",
     "jupytext",
]
tests = [
      "flake8", 
      "pytest-cov",
      "pytest-flake8",
      "pytest-xdist",
      "pytest-html",
]

[tool.poetry.dev-dependencies]
memory-profiler = ">=0.58.0"
line-profiler = ">=3.2.6"
poetry2conda = ">=0.3.0"
black = ">=21.6b0"

[tool.poetry.scripts]
super_hydro = "super_hydro.cli:super_hydro"
super_hydro_client = "super_hydro.clients.flask:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

######################################################################
# poetry2conda: https://github.com/dojeda/poetry2conda
# Use this to generate environment.yml files.
[tool.poetry2conda]
name = "super_hydro"

[tool.poetry2conda.dependencies]
mmf-setup = { channel = "pip" }
mmfutils = { channel = "pip" }
ipycanvas = { channel = "conda-forge" }

#[tool.poetry.data_files]

######################################################################
# PyTest
[tool.pytest.ini_options]
testpaths = [ "src/super-hydro" ]
markers = [
    # mark test as a benchmark.  (Might be slow, or platform dependent)
    "bench",
    # mark test as slow.
    "slow",
]
addopts = [
    "-m not bench",
    "--doctest-modules",
    "--cov",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--no-cov-on-fail",
    #"-x",
    #"--pdb",
    #"--flake8",  # Disable until https://github.com/tholo/pytest-flake8/issues/8
]

doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE"
    ]

######################################################################
# Black
[tool.black]
exclude = '''
    /(
        \.git
      | \.hg
      | \.nox
      | \.venv
      | _build
      | build
      | dist
    )/
'''
